--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install flake8
         # pip install -r requirements.txt
         # sudo apt-get install python3 python3-pip
         sudo apt-get install git python3-cffi build-essential wget python3-dev python3-venv python3-wheel libxslt-dev libzip-dev libldap2-dev libsasl2-dev python3-setuptools node-less libpng-dev libjpeg-dev gdebi -y
@@ -32,3 +33,27 @@ jobs:
     - name: Run Tests
       run: |
         whoami
+
+          
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build    
+    name: deploy
+    
+    steps:
+
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.DO_IP}}
+        username: ${{ secrets.DO_USER }}
+        password: ${{ secrets.DO_KEY }}
+      
+        script: |
+        
+          cd  /odoo/odoo-server/
+          git fetch          
+          git reset --hard origin/s16.01
+              
+          #git pull origin main
+        
